{
  "version": 4,
  "terraform_version": "1.10.4",
  "serial": 327,
  "lineage": "c32bbfa6-7005-fc2b-d2ae-9d106cfafa73",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "rds_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:internet-gateway/igw-08f85a7fc451cb219",
            "id": "igw-08f85a7fc451cb219",
            "owner_id": "961653683111",
            "tags": {
              "Name": "rds_ig"
            },
            "tags_all": {
              "Name": "rds_ig"
            },
            "vpc_id": "vpc-014754d8822955c26"
          },
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rds_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:route-table/rtb-08d151b1229d43b73",
            "id": "rtb-08d151b1229d43b73",
            "owner_id": "961653683111",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08f85a7fc451cb219",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rds_route_table"
            },
            "tags_all": {
              "Name": "rds_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-014754d8822955c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.rds_ig",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_a_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00990f5652191274c",
            "route_table_id": "rtb-08d151b1229d43b73",
            "subnet_id": "subnet-0f0d4a85bdf342944"
          },
          "dependencies": [
            "aws_internet_gateway.rds_ig",
            "aws_route_table.rds_route_table",
            "aws_subnet.subnet_a",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet_b_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5559cd5a327bdc2",
            "route_table_id": "rtb-08d151b1229d43b73",
            "subnet_id": "subnet-01bc514882685a82f"
          },
          "dependencies": [
            "aws_internet_gateway.rds_ig",
            "aws_route_table.rds_route_table",
            "aws_subnet.subnet_b",
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:security-group/sg-0adbf0948d6e68c2d",
            "description": "Allow inbound traffic to RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adbf0948d6e68c2d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds_security_group",
            "name_prefix": "",
            "owner_id": "961653683111",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds_sg"
            },
            "tags_all": {
              "Name": "rds_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-014754d8822955c26"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-0f0d4a85bdf342944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d4a85bdf342944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_a"
            },
            "tags_all": {
              "Name": "subnet_a"
            },
            "vpc_id": "vpc-014754d8822955c26"
          },
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:subnet/subnet-01bc514882685a82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bc514882685a82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "961653683111",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_b"
            },
            "tags_all": {
              "Name": "subnet_b"
            },
            "vpc_id": "vpc-014754d8822955c26"
          },
          "dependencies": [
            "aws_vpc.rds_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "rds_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:961653683111:vpc/vpc-014754d8822955c26",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03fb708ddecf54d73",
            "default_route_table_id": "rtb-027e2f0db23a09786",
            "default_security_group_id": "sg-01a1fcf83cb34dd93",
            "dhcp_options_id": "dopt-0d8e2277",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-014754d8822955c26",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-027e2f0db23a09786",
            "owner_id": "961653683111",
            "tags": {
              "Name": "rds_vpc"
            },
            "tags_all": {
              "Name": "rds_vpc"
            }
          }
        }
      ]
    }
  ]
}